--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dev_dependencies:
   dart_to_js_script_rewriter: ^1.0.1
 
 transformers:
-- dartson
+#- dartson
 - angular:
     entry_points:
       - web/main.dart
