--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,32 +1,16 @@
 name: nsmp_barcode_app
-description: A web app that uses AngularDart Components
-version: 1.0.0
+description: Embebed web application for printing barcodes in Naumen SMP & ITSM 365
+version: 1.0.1
 #homepage: https://www.example.com
 #author: mdemyanov <email@example.com>
 
 environment:
-  sdk: '>=1.24.0 <2.0.0'
+  sdk: '>=2.0.0-dev.68.0 <3.0.0'
 
 dependencies:
-  angular: ^4.0.0
-  angular_components: ^0.8.0
   dart_barcode: ^1.0.0
-  dartson: ^0.2.7
+  naumen_smp_jsapi: ^1.0.0
 
 dev_dependencies:
-  angular_test: ^1.0.0
-  browser: ^0.10.0
-  dart_to_js_script_rewriter: ^1.0.1
-
-transformers:
-#- dartson
-- angular:
-    entry_points:
-      - web/main.dart
-- dart_to_js_script_rewriter
-
-# Uncomment the following in sdk 1.24+ to make pub serve
-# use dartdevc (webdev.dartlang.org/tools/dartdevc).
-#web:
-#  compiler:
-#    debug: dartdevc
+  build_runner: ^0.9.0
+  build_web_compilers: ^0.4.0
